# multiscale-byte-lm

./: .pre-commit-config.yaml  .travis.yml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
.hooks/: licenseheaders.py
config/: clevr_7mi_360m_1d_s_ft.yaml  clevr_7mi_360m_1d_s_pt1_ft.yaml  pg19_200bb_360m_3d_stt.yaml  pg19_30bb_360m_1d_t.yaml  pg19_30bb_360m_2d_ss.yaml  pg19_30bb_360m_2d_st.yaml  readme.md
scripts/: clevr_generation.py  clevr_generation.sh  model_overview.py  pg19_generation.py  train_mblm.py  train_mblm.sh
src/mblm/: __init__.py  registry.py
src/mblm/analysis/: aggregate.py  metrics.py  utils.py
src/mblm/data/: datasets.py  types.py
src/mblm/data/dataset/: clevr.py  pg19.py  pg19_masked.py
src/mblm/model/: block.py  config.py  embeddings.py  mamba.py  mamba_shim.py  mblm.py  transformer.py  utils.py
src/mblm/scripts/: clevr_generation.py  clevr_generation.sh  cuda_check.py  model_overview.py  pg19_generation.py  pg19_generation.sh  train_launch.sh  train_mblm.py
src/mblm/train/: mblm.py
src/mblm/train/core/: config.py  trainer.py
src/mblm/trainer/: config.py  core.py  mblm.py
src/mblm/utils/: io.py  misc.py  stream.py
tests/e2e/trainer/: run_trainer.py  sample-config-0.5-epoch.yaml  sample-config-1-epoch.yaml  sample-config-1.5-epoch.yaml  sample-config-grad-acc-1.yaml  sample-config-grad-acc-2.yml  validate.py
tests/fixtures/clevr/questions/: CLEVR_val_questions.json
tests/integration/config/: test_sample_config_to_model.py
tests/integration/install/: README.md  pyproject.toml  test_custom.py  test_custom_block.py  test_custom_dataset.py  test_default_block.py  test_defaults.py  test_stream.py  test_streaming.py  test_version.py
tests/integration/model_config/: test_config_to_model.py
tests/unit/data/: test_bytes.py  test_clevr.py  test_datasets.py  test_image.py  test_masked.py  test_tokenizer.py  test_utils.py
tests/unit/model/: test_config.py  test_mblm.py  test_megabyte_diff.py
tests/unit/registry/: test_registry.py
tests/unit/train/: test_iter.py
tests/unit/trainer/: test_iter.py
tests/unit/utils/: test_io.py  test_misc.py  test_retry.py  test_stream.py  test_top_n.py
